--- a/project.config.json
+++ b/project.config.json
@@ -33,7 +33,7 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": -1,
+			"current": 1,
 			"list": [
 				{
 					"id": 0,
@@ -44,7 +44,7 @@
 				{
 					"id": 1,
 					"name": "3",
-					"pathName": "pages/edit/index",
+					"pathName": "pages/dairy/index",
 					"query": ""
 				}
 			]
